final commit for responsive project

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 			<nav>
 				<ul>
 					<li><a href="index.html">About</a></li>
-					<li> | </li>
+					<li id = "line"> | </li>
 					<li><a href="portfolio.html">Portfolio</a></li>
-					<li> | </li>
+					<li id ="line"> | </li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav> <!-- End Nav -->
@@ -26,7 +26,7 @@
 		<div class ="main_content">
 			<div class ="about">
 				<h2>About Me </h2>
-				<img class = "me_photo" src = "assets/images/coffee_JZ.jpg" alt ="John Zoshak"/>
+					<img class = "me_photo" src = "assets/images/coffee_JZ.jpg" alt ="John Zoshak"/>
 				<p>
 					I’m attempting to become a unicorn. A product manager who can write code, design beautiful user experiences, and execute business strategies with aplomb.
 				</p>
